syntax = "proto3";

package fastchain;

//Interface exposed by pbft committee nodes
service FastChain {
        //Send new transaction to presumed leader node
        rpc NewTxnRequest (Transaction) returns (GenericResp) {}
}

message Request {
    message Inner {
        int32 id                = 1;
        int32 seq               = 2;
        int32 view              = 3;
        int32 type              = 4;
        PbftBlock block         = 5;
        int64 timestamp         = 6;
    }

    Inner inner         = 1;
    bytes dig           = 2;
    bytes outer         = 3;
}

message PbftNode {
    string addr	     = 1;
    string pubkey    = 2;
    string privkey   = 3;
}

message Nodes {
    repeated PbftNode nodes = 1;
}

message TxnData {
    uint64 AccountNonce = 1;
    int64  Price        = 2;
    int64  GasLimit     = 3;
    bytes  Recipient    = 4;
    int64  Amount       = 5;
    bytes  Payload      = 6;
    bytes  Signature    = 7;
    bytes  Hash         = 8;
}

message Transaction {
    TxnData data        = 1;
}

message PbftBlockHeader {
    int64  Number 	= 1;
    int64  GasLimit     = 2;
    int64  GasUsed	= 3;
    int64  Timestamp	= 4;
    bytes  ParentHash   = 5;
    bytes  TxnsHash     = 6;
}

message PbftBlock {
    PbftBlockHeader             Header  = 1;
    repeated Transaction        Txns    = 2;
    repeated string             Signs   = 3;
}

message TrueChain {
        repeated PbftBlock Blocks       = 1;
        PbftBlockHeader LastBlockHeader = 2;
}

message GenericResp {
        string Msg = 1;
}
